1 page reservation mobile corrected
2 page done all excludeing table number title

--- a/src/Components/main/reservation/1_page_info/style.css
+++ b/src/Components/main/reservation/1_page_info/style.css
@@ -96,7 +96,7 @@
     .contactFormList {
         background-color: white;
         width: 100%;
-        height: 100%;
+        height: 250px;
         overflow: hidden;
         overflow-y: scroll;
         user-select: none;
@@ -109,8 +109,8 @@
         justify-content: flex-start;
     }
     .allComponentTitleFirstPage {
-        margin-top: 131px;
-        margin-bottom: 40px;
+        margin-top: 114px;
+        margin-bottom: 9px;
     }
     .contactFormLineAmountBox {
         justify-content: right;
