--- a/src/Components/main/reservation/2_page_client_info/style.css
+++ b/src/Components/main/reservation/2_page_client_info/style.css
@@ -224,6 +224,7 @@
     scale: 1.4;
 }
 
+
 .reservationClientDataBox > * {
     margin-bottom: 80px;
     margin-top: -22px;
@@ -288,19 +289,25 @@
     }
     .firstColumn h3{
         padding-left: 25%;
+        margin-bottom: -9px;
+    }
+    .reservationClientDataBox {
+        height: 237px;
+        overflow: scroll;
     }
     .reservationClientDataBox > * {
-    margin-top: -20px;
+    margin-top: -9px;
     }
     .nameInput {
+        margin-top: 10px;
         margin-bottom: -10px;
     }
     .firstColumn h3 {
-        margin-bottom: 55px;
+        margin-bottom: 18px;
     }
     .tableNumberInput {
         display: block;
-        margin-bottom: 45px;
+        margin-bottom: 30px;
     }
 
     .tableSelectorTitle {
