--- a/src/Components/nav-component/nav.scoped.css
+++ b/src/Components/nav-component/nav.scoped.css
@@ -9,6 +9,7 @@
 
 
 .navIcon {
+    margin-right: 20px;
     width: 50px;
     height: 50px;
 }
@@ -274,6 +275,7 @@
         justify-content: center;
     }
     .navIcon {
+        margin-right: auto;
         position: fixed;
         right: 0px;
     }
